# matpri

./: README.md  setup.cfg  setup.py
matpri/complejas/: operaciones.py
matpri/figuras/: areas.py
matpri/reales/: operaciones.py
src/matpri/figuras/: perimetros.py
