[metadata]
name = matpri
version = 0.1.0
author = Tu Nombre
author_email = tuemail@example.com
description = Un paquete de matemáticas para operaciones con reales, figuras, y números complejos
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    ejemplo-dependencia>=1.0

[options.packages.find]
where = src
